<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.dashboard.fragment.home.HomeFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/_12dp"
        android:elevation="3dp"
        card_view:cardUseCompatPadding="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_userinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hey, Kiara"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Find a course you want to learn"
                    android:textColor="@color/subHeading"
                    android:textSize="14sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerHorizontal="true"
                    android:padding="2dp"
                    android:src="@drawable/ic_user"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv_user_info"
        android:layout_marginTop="10dp"
        android:gravity="right">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/search_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:src="@drawable/ic_search" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_top_recommendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_search_bar"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/str_top_recommendation"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/mediumTextSize"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_top_recommedation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:scrollbars="none" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/view_border"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/ll_top_recommendation"
        android:layout_margin="5dp"
        android:background="@color/border" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_most_visited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_border"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/most_viewed"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/mediumTextSize"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_see_more"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="4dp"
                android:text="@string/see_more"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_most_viewed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="30dp"
            android:scrollbars="none" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>